--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material 
-      - run: mkdocs gh-deploy --force
-
+      - run: pip install mkdocs-material
+      - run: mkdocs gh-deploy --config-file mkdocs_material.yml --force
