--- a/mkdocs_material.yml
+++ b/mkdocs_material.yml
@@ -2,4 +2,5 @@ site_name: RARBG PROXY LIST
 site_url: https://therarbg.com
 nav:
   - Home: README.md
-theme: readthedocs
+theme:
+    name: material
